syntax = "proto3";

package user;

// Определение перечисления ролей пользователя
enum UserRoleEnum {
  USER_ROLE_UNSPECIFIED = 0; // Значение по умолчанию
  ADMIN = 1;
  VIP = 2;
}

// Определение сервиса для работы с пользователями
service UserService {
  rpc RegisterUser (RegisterUser) returns (UserResponse); // Метод регистрации пользователя
  rpc LoginUser (LoginUser) returns (UserResponse); // Метод логина пользователя
}

// Запрос на регистрацию пользователя
message RegisterUser {
  string firstName = 1;      // Имя
  string lastName = 2;       // Фамилия
  string email = 3;          // Электронная почта
  string phone = 4;          // Телефон (необязательное)
  string address = 5;        // Адрес (необязательное)
  string username = 6;       // Имя пользователя
  string password = 7;   // Пароль
}

// Запрос на логин пользователя
message LoginUser {
  string loginParam = 1;      // Почта, логин или номер телефона
  string password = 2;       // Хеш пароля
}

// Ответ на запрос пользователя (информация о зарегистрированном пользователе)
message UserResponse {
  int32 id = 1;              // ID пользователя
  string firstName = 2;      // Имя
  string lastName = 3;       // Фамилия
  string email = 4;          // Электронная почта
  string phone = 5;          // Телефон (необязательное)
  string address = 6;        // Адрес (необязательное)
  string username = 7;       // Имя пользователя
  UserRoleEnum role = 9;     // Роль пользователя
}
